--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!--begin hero section-->
   <section>
   <div class="hero">
-    <img src="/assets/images/logo.png" alt="logo" width="60" height="60"/>
+    <img src="./images/logo.png" alt="logo" width="60" height="60"/>
     <h1 id="title">Colorado</h1>
     <h2 id="subtitle">Tour and travel</h2>
     <div class="hero-icon"><i class='bx bxs-chevron-down'></i>
