--- a/index.html
+++ b/index.html
@@ -36,10 +36,13 @@
      <div class="right-intro">
         <p id="intro-p">Are you planning a trip to Colorado? Are you trying to figure out what you'll do <br>and 
          where you'll do it? You are in the right place. From national parks to ski resorts, <br> this website will
-         help you weigh out your options and prepare you for one of the most eventful trips of a lifetime. 
-         
-
-
+         help you weigh out your options and prepare you for one of the <br>most eventful trips of a lifetime. </p>
+         <p id="intro-p"> Get some inside details on one of our many national parks and even read about how <br>
+         previous visitors would rate their trip experience. Additionally, we provide all the <br> statistics you need
+         to know regarding in-state attractions, hotel avaliability, and <br>crime rate. It's all here in this site.
+         Feel free to contact us at 1-800-###-#### or <br>send us an email at info@colorado.com.</p>
+        
+         <button class="ctn-button">Read More</button>
      </div>
     </div>
     </section>
