--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
       <h2>Is it your dream to travel to Colorado?</h2>
      </div>
      <div class="right-intro">
-        <p id="intro-p">Are you planning a trip to Colorado? Are you trying to figure out what you'll do <br>and 
+        <p>Are you planning a trip to Colorado? Are you trying to figure out what you'll do <br>and 
          where you'll do it? You are in the right place. From national parks to ski resorts, <br> this website will
          help you weigh out your options and prepare you for one of the <br>most eventful trips of a lifetime. </p>
-         <p id="intro-p"> Get some inside details on one of our many national parks and even read about how <br>
+         <p> Get some inside details on one of our many national parks and even read about how <br>
          previous visitors would rate their trip experience. Additionally, we provide all the <br> statistics you need
          to know regarding in-state attractions, hotel avaliability, and <br>crime rate. It's all here in this site.
          Feel free to contact us at 1-800-###-#### or <br>send us an email at info@colorado.com.</p>
@@ -71,6 +71,29 @@
     </div>
     </section>
     <!--end activities section-->
+     
+    <!--begin recommendations section-->
+    <section>
+      <div class="recommendations">
+        <h2 class="section-header">Pikes Peak Highway</h2>
+        <div class="content">
+          <p>Being one of the highest summits in the state, a nineteen-mile long drive up to the <br>
+            Pikes Peak summit is one of the best ways to experience Colroado's breathtaking <br>scenic mountain 
+            views. Explore not only the beautiful scenery but the various rest <br>stops and giftshops, including
+            the visitor center at the highest point of the summit <br>where visitors have the option to grab something 
+            to eat or buy souveniers. 
+            <h3>What To Wear</h3>
+            <p>Whether it's summer or fall, there is always guaranteed to be cold temperatures <br>and snow going up 
+              the summit. Dress in warm clothes as well as comfortable shoes <br>as you do have the option to walk around 
+              the summit if you so please. 
+              
+            </p>
+          </p>
+        </div>
+      </div>
+    </section>
+
+
 
 </main>
 </body>
