--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
     <!--begin intro section-->
     <section>
     <div class="intro">
+      <!--left content-->
      <div class="left-intro">
       <h2>Is it your dream to travel to Colorado?</h2>
      </div>
+     <!--right content-->
      <div class="right-intro">
         <p>Are you planning a trip to Colorado? Are you trying to figure out what you'll do <br>and 
          where you'll do it? You are in the right place. From national parks to ski resorts, <br> this website will
@@ -126,7 +128,7 @@
     <!--start author section-->
     <section>
       <div class="author">
-        <img src="./assets/images/IMG_6511.jpg" alt="Philip" height="200" width="200">
+        <img src="./assets/images/IMG_6511.jpg" alt="Philip" height="200" width="200"/>
         <p>"This trip was personally a very memorable one. The views 
           up at the Pikes Peak <br> summit had to be the best scenic views 
           I have ever seen in my life. The picures I <br>took do not give justice
@@ -135,13 +137,63 @@
           planning a trip to Colorado."
         </p>
         <h3>Philip Przekora</h3>
-        <i class='bx bxs-chevron-down'></i>
+        <div class="hero-icon"><i class='bx bxs-chevron-down'></i>
+        </div>
       </div>
     </section>
     <!--end author section-->
 
-    
-
+    <!--begin gallery section-->
+    <section>
+      <div class="gallery">
+      <img src="./assets/images/pexels-zachtheshoota-3608038.jpg" alt="car views" width="200" height="300"/>
+      <img src="./assets/images/pexels-david-besh-969260.jpg" alt="historic cottage" width="200" height="300"/>
+      <img src="./assets/images/pexels-colin-lloyd-2120291-3751010.jpg" alt="union-station" width="200" height="300"/>
+      <img src="./assets/images/pexels-joshuaworoniecki-11632532.jpg" alt="garden of the gods" width="200" height="300"/>
+      </div>
+    </section>
+    <!--end gallery section-->
 </main>
+<!--end main-->
+
+<!--begin footer-->
+<footer>
+  <!--begin footer section-->
+  <section>
+    <!--left content-->
+   <div class="left-content">
+    <!--contact info-->
+    <h2 class="section-header">Contact Us</h2>
+    <ul>
+      <li>Toll Free: 1-800-###-####</li>
+      <li>Anchorage: 1-###-###-####</li>
+      <li>Fax: ###-###-####</li>
+      <li>Email: info@colorado.com</li>
+    </ul>
+    <!--social links-->
+    <div class="icon-wrapper">
+      <i class='bx bxl-facebook-square'></i>
+      <i class='bx bxl-twitter'></i>
+      <i class='bx bxl-instagram'></i>
+      <i class='bx bxl-pinterest'></i>
+      <i class='bx bxl-linkedin-square'></i>
+    </div>
+   </div>
+   <!--right content-->
+   <div class="right-content">
+    <form action="#">
+     <input type="text" name="user-name" id="user-name" placeholder="Name"/>
+     <br>
+     <input type="email" name="user-email" id="user-email" placeholder="Email"/>
+     <br>
+     <textarea name="user-message" id="user-message" placeholder="Message"></textarea>
+     <br>
+     <button class="btn-submit">Submit</button>
+    </form>
+    </div>
+  </section>
+   <!--end footer section-->
+</footer>
+<!--end footer-->
 </body>
 </html>
