--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="hero">
     <img src="./assets/images/logo.png" alt="logo" width="60" height="60"/>
     <h1 id="title">Colorado</h1>
-    <h2 id="subtitle">Tour and travel</h2>
+    <h2 id="subtitle">Tour And Travel</h2>
     <div class="hero-icon"><i class='bx bxs-chevron-down'></i>
     </div>
     </div>
