--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="intro">
       <!--left content-->
      <div class="left-intro">
-      <h2>Is it your dream to travel to Colorado?</h2>
+      <h2>Is it your dream <br> to travel to <br> Colorado?</h2>
      </div>
      <!--right content-->
      <div class="right-intro">
@@ -45,7 +45,7 @@
          to know regarding in-state attractions, hotel avaliability, and <br>crime rate. It's all here in this site.
          Feel free to contact us at 1-800-###-#### or <br>send us an email at info@colorado.com.</p>
         
-         <button class="ctn-button">Read More</button>
+         <button class="ctn-button">read more</button>
      </div>
     </div>
     </section>
