--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!--boxicon import-->
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet"/>
     <!--style sheet link-->
-    <link rel="stylesheet" href="/css/style.css"/>
+    <link rel="stylesheet" href="./css/style.css"/>
 </head>
 <body>
 <!--begin header-->
