--- a/index.html
+++ b/index.html
@@ -56,20 +56,20 @@
     <div class="activities">
     <h2 class="section-header">Experience it all</h2>
     <div class="activities-wrapper">
-        <div class="activities-container">
+        <div class="activities-container-1">
           <h3 class="activity-title">National Parks</h3>
           <div class="activity-icon"><i class='bx bx-chevron-down' ></i></div>
         </div>
-        <div class="activities-container">
+        <div class="activities-container-2">
           <h3 class="activity-title">Ski Resorts</h3>
           <div class="activity-icon"><i class='bx bx-chevron-down' ></i></div>
         </div>
-        <div class="activities-container">
+        <div class="activities-container-3">
           <h3 class="activity-title">Cities</h3>
           <div class="activity-icon"><i class='bx bx-chevron-down' ></i></div>
         </div>
     </div>
-    <button class="ctn-button">Read More</button>
+    <button class="ctn-button">read more</button>
     </div>
     </section>
     <!--end activities section-->
@@ -190,6 +190,9 @@
      <br>
      <button class="btn-submit">Submit</button>
     </form>
+    </div>
+    <div class="copyright">
+      <span>Copyright &copy 2024 All Rights Reserved </span>
     </div>
   </section>
    <!--end footer section-->
