--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           <p>Are repeat visitors</p>
         </div>
         <div class="stats-wrapper"> 
-          <h3>93,000,000</h3>
+          <h3>93 Million</h3>
           <p>Visitors in the last year</p>
         </div>
       </div>
@@ -128,7 +128,7 @@
     <!--start author section-->
     <section>
       <div class="author">
-        <img src="./assets/images/IMG_6511.jpg" alt="Philip" height="200" width="200"/>
+        <img src="./assets/images/IMG_6511.jpg" alt="Philip"/>
         <p>"This trip was personally a very memorable one. The views 
           up at the Pikes Peak <br> summit had to be the best scenic views 
           I have ever seen in my life. The picures I <br>took do not give justice
@@ -146,10 +146,10 @@
     <!--begin gallery section-->
     <section>
       <div class="gallery">
-      <img src="./assets/images/pexels-zachtheshoota-3608038.jpg" alt="car views" width="200" height="300"/>
-      <img src="./assets/images/pexels-david-besh-969260.jpg" alt="historic cottage" width="200" height="300"/>
-      <img src="./assets/images/pexels-colin-lloyd-2120291-3751010.jpg" alt="union-station" width="200" height="300"/>
-      <img src="./assets/images/pexels-joshuaworoniecki-11632532.jpg" alt="garden of the gods" width="200" height="300"/>
+      <img src="./assets/images/pexels-zachtheshoota-3608038.jpg" alt="car views" />
+      <img src="./assets/images/pexels-david-besh-969260.jpg" alt="historic cottage"/>
+      <img src="./assets/images/pexels-colin-lloyd-2120291-3751010.jpg" alt="union-station" />
+      <img src="./assets/images/pexels-joshuaworoniecki-11632532.jpg" alt="garden of the gods" />
       </div>
     </section>
     <!--end gallery section-->
