--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
 <footer>
   <!--begin footer section-->
   <section>
+    <div class ="footer-main">
     <!--left content-->
    <div class="left-content">
     <!--contact info-->
@@ -183,16 +184,11 @@
    <div class="right-content">
     <form action="#">
      <input type="text" name="user-name" id="user-name" placeholder="Name"/>
-     <br>
      <input type="email" name="user-email" id="user-email" placeholder="Email"/>
-     <br>
      <textarea name="user-message" id="user-message" placeholder="Message"></textarea>
-     <br>
      <button class="btn-submit">Submit</button>
     </form>
     </div>
-    <div class="copyright">
-      <span>Copyright &copy 2024 All Rights Reserved </span>
     </div>
   </section>
    <!--end footer section-->
